--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "pubsub-js": "^1.9.0",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1"
